src/styles.css
@import "~@angular/material/prebuilt-themes/indigo-pink.css";

[hidden] {
  display: none !important;
}

body {
  margin: 0;
  background: #eef;
  font-family: Roboto, sans-serif;
}

.mat-sidenav-container {
  overflow: visible !important;
}
.mat-sidenav-content {
  height: auto !important;
  overflow: visible !important;
}

.main-card {
  margin: 20px;
}

/* Mimics default style of mat-form-field label,
   for inputs where it is not supported. */
.custom-field-label {
  display: block;
  margin-bottom: 4px;
  font-size: 75%;
  color: rgba(0,0,0,.54);
}

.negative {
  color: #e74c3c;
}

.amount-field input {
  text-align: right;
  -moz-appearance: textfield; /* hide spinner in Firefox */
}

.amount-field input::-webkit-outer-spin-button,
.amount-field input::-webkit-inner-spin-button {
    -webkit-appearance: none;
}

/* Middle align icons by default. */
.mat-icon {
  vertical-align: middle;
}

/* Apply icon style of mat-option also to mat-select-trigger. */
.mat-select-trigger .mat-icon {
  margin-right: 16px;
  vertical-align: middle;
}

@media screen and (max-width: 599px) {
  .main-card {
    margin: 0;
  }
  
  /* On xs screens, force dialogs to full width. */
  .cdk-overlay-pane {
    max-width: none !important;
    width: 100%;
    margin: 0 10px;
  }
}

